# chromatic_mcu

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.old  test_embedded_module.sh
components/battery/: CMakeLists.txt  battery.c  battery.h
components/button/: CMakeLists.txt  button.c  button.h
components/common/: CMakeLists.txt  color.h  line.h  osd_shared.c  osd_shared.h
components/crc/: CMakeLists.txt  crc8_sae_j1850.c  crc8_sae_j1850.h
components/dlist/: CMakeLists.txt  dlist.h
components/embedded_modules/: CMakeLists.txt  embedded_modules.c  embedded_modules.h
components/fonts/: CMakeLists.txt  chibit_mr.c  fingfai.c  jf_dot_k14.c
components/fpga_psram_module/: CMakeLists.txt  fpga_psram_module.c  fpga_psram_module.h
components/images/: CMakeLists.txt  icon_bat_large_g.c  icon_bat_large_r.c  icon_bat_large_y.c  icon_charging.c  icon_wifi.c  img_a_right.c  img_arrow_down.c  img_arrow_up.c  img_b_left.c  img_brightness.c  img_chromatic.c  img_chromatic_eyebrow.c  img_dot_grey.c  img_dot_white.c  img_option_dis.c  img_option_en.c  img_toggle_off.c  img_toggle_on.c  menu_controls.c  menu_display.c  menu_palette.c  menu_status.c  menu_system.c
components/menu_mgr/: CMakeLists.txt  menu_mgr.c  menu_mgr.h
components/module_loader/: CMakeLists.txt  README.md  module_loader.c  module_loader.h
components/mutex/: CMakeLists.txt  mutex.c  mutex.h
components/osd/: CMakeLists.txt  osd.c  osd.h  osd_default.c  osd_default.h
components/osd/controls/: dpad_ctl.c  dpad_ctl.h  hotkeys.c  hotkeys.h
components/osd/display/: color_correct_lcd.c  color_correct_lcd.h  color_correct_usb.c  color_correct_usb.h  frameblend.c  frameblend.h  low_batt_icon_ctl.c  low_batt_icon_ctl.h  screen_transit_ctl.c  screen_transit_ctl.h
components/osd/palette/: palette.c  palette.h  style.c  style.h
components/osd/status/: brightness.c  brightness.h  fw.c  fw.h
components/osd/system/: player_num.c  player_num.h  serial_num.c  serial_num.h  silent.c  silent.h  wifi_file_server.c  wifi_file_server_osd.h
components/sd_spi/: CMakeLists.txt  README.md  sd_spi.c  sd_spi.h
components/settings/: CMakeLists.txt  settings.c  settings.h
components/tab/: CMakeLists.txt  tab_shared.c  tab_shared.h
components/tab/tab_dots/: tab_dots.c  tab_dots.h
components/tab/tab_list/: tab_list.c  tab_list.h
components/tab/tab_table/: tab_table.c  tab_table.h
components/wifi_file_server/: CMakeLists.txt  README.md  wifi_file_server.c
components/wifi_file_server/include/: wifi_file_server.h
components/wifi_file_server/www/: .eslintrc.json  .gitignore  .htmlhintrc  .stylelintrc.json  README.md  app.js  build.js  index.html  style.css
dev_tools/: README.md  chromatic-api-server.js  package.json  run_lvgl_simulator.sh  setup_lvgl_simulator.sh
dev_tools/lvgl_simulator/: BUILD_STATUS.md  CMakeLists.txt  INTEGRATION_GUIDE.md  chromatic_test.c  esp_log.h  esp_stubs.c  esp_stubs.h  lv_conf.h  lvgl  main.c  mouse_cursor_icon.c
dev_tools/lvgl_simulator/chromatic_components/: fonts  images  osd
dev_tools/lvgl_simulator/freertos/: FreeRTOS.h
docs/: DOUBLE_BUFFERING_SPEC.md  ESP32_CODE_EXECUTION.md  FPGA_PSRAM_PROTOCOL.md  MODULE_DEVELOPMENT.md  MODULE_MEMORY_ISOLATION.md  MODULE_SYSTEM_SUMMARY.md  PSRAM.md  PSRAM_MODULE_LOADING.md  PSRAM_STRATEGY.md  TESTING.md  TEST_FLASH_MODULE.md  WIFI_FILE_SERVER_IMPROVEMENTS.md  WIFI_FILE_SERVER_REFACTOR.md
examples/: example_module.c  hello.mod  hello_module.c
main/: CMakeLists.txt  Kconfig.projbuild  board.h  bt_audio.c  bt_audio.h  cmd_bt_audio.c  cmd_filesystem.c  cmd_filesystem.h  cmd_modules.c  cmd_modules.h  cmd_psram_256test.c  cmd_psram_diag.c  cmd_psram_test.c  cmd_sd_init.c  cmd_sd_spi.c  cmd_sd_spi.h  cmd_sd_test.c  cmd_sd_test.h  fpga_common.c  fpga_common.h  fpga_psram.c  fpga_psram.h  fpga_rx.c  fpga_rx.h  fpga_tx.c  fpga_tx.h  gfx.c  gfx.h  main.c  osd_default.c  pwrmgr.c  pwrmgr.h
tools/: build_module.py
